--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 #
 # Site Info
 title: Gestión de APIs
-tagline: 'A Jekyll theme based on Lanyon'
-description: 'A Jekyll theme adapted from <a href="http://lanyon.getpoole.com/" target="_blank">Lanyon</a>. Made by <a href="http://codinfox.github.io" target="_blank">@codinfox</a>.'
+tagline: 'Gestión de APIs'
+description: 'Mi bitácora, donde principalmente hablo de gestión de APIs.'
 baseurl: "/codinfox-lanyon"
 url: http://luzbel.github.io
 logo: '/public/logo.png'
@@ -26,7 +26,7 @@ version: 1.0.0
 # About/contact
 author:
   name: sjblanes
-  description: A passionate <strong>developer and researcher</strong>, learning to be a giant.
+  description: Un señor que se gana la vida ayudandote a <strong>gestionar tus APIs</strong>.
 #  gravatar: 3c2986ad7ac1f2230ea3596f44563328 # md5 hash of your email address
   contact:
     linkedin:  https://www.linkedin.com/in/sebastianblanes
