--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ version: 1.0.0
 # About/contact
 author:
   name: sjblanes
-  description: Un señor que se gana la vida ayudandote a <strong>gestionar tus APIs</strong>.
+  description: Un señor que se gana la vida ayudándote a <strong>gestionar tus APIs</strong>.
 #  gravatar: 3c2986ad7ac1f2230ea3596f44563328 # md5 hash of your email address
   contact:
     linkedin:  https://www.linkedin.com/in/sebastianblanes
