--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #
 # Site Info
-title: 'Cuaderno de bitácora de un gestor de APIs'
-tagline: 'Cuaderno de bitácora de un gestor de APIs'
+title: 'Gestión de APIs'
+tagline: 'Cuaderno de bitácor'
 #tagline: 'donde principalmente hablo de, ¡oh sorpresa!, gestión de APIs'
 description: 'Mi cuaderno de bitácora, donde principalmente hablo de gestión de APIs.'
 baseurl: "/codinfox-lanyon"
