Emojis, social feeds y mejora categorías
* _config.yml:
  * Activamos el plugin jemoji, incluido en gh-pages para tener emojis
en los mensajes
  * Como alternativa a que con el filtro excerpt no se vean los emoji,
definimos un tamaño máximo de resumen para generarlos con el filtro
normal de número de caracteres
* blog/index.html
  * Cambio post.excerpt por post.content | truncatewords, ya que con
excerpt no se ven bien los emojis en los resúmenes
* _scss/component/_post.scss
  * Se añade CSS para que los emojis salgan alineados con el texto
* atom.xml
  * Añado la baseurl al path del post
* _layouts/social-feed.xml
  * Plantilla para tener distintos feeds para publicar diferentes
contenidos con IFTTT o zapier en distintas redes sociales
* social-feeds/[email|linkedin].xml
  * Feeds para estas formas de publicar, basándose en la plantilla
social-feed.xml. Para publicar, indicar en el campo share del
Front Matter del yaml del post, los destinos deseados
* _layouts/categories.html
  * Paso el /blog/categories a una plantilla, para poder tener páginas
por cada categoría
* blog/categories.html
  * Pasa a usar la nueva plantilla
* blog/[apim|vigasocosdl|misc].html
  * Las páginas que agrupan los post de las categorías iniciales que
voy a usar
* _data/apim/listado-productos.yaml
  * Prueba listado productos de gestión de APIs

Changes to be committed:
	modified:   _config.yml
	new file:   _data/apim/listado-productos.yaml
	copied:     blog/categories.html -> _layouts/categories.html
	new file:   _layouts/social-feed.xml
	deleted:    _posts/2013-12-31-whats-jekyll.md
	deleted:    _posts/2014-01-01-example-content.md
	deleted:    _posts/2014-01-02-introducing-lanyon.md
	renamed:    _posts/2016-11-12-cloud9-ghpages.md -> _posts/misc/2016-11-12-cloud9-ghpages.md
	new file:   _posts/misc/2016-11-13-TODO.md
	new file:   _posts/misc/2016-11-13-ifttt-jekyll.md
	new file:   _posts/misc/2016-11-13-jekyll-ghpages-data.md
	new file:   _posts/misc/2016-11-13-jekyll-ghpages-emoji.md
	mo

--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,9 @@ category_page: '/blog/categories/'
 home:
   image: /public/img/Luzbel_Retiro.512px.JPG
   caption: Original by Magnificus (Own work) [<a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a> or <a href="http://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>], <a href="https://commons.wikimedia.org/wiki/File%3ALuzbel_Retiro.JPG">via Wikimedia Commons</a>
+ 
+# como alternativa a excerpt, mientras no genera bien los emojis 
+excerpt_length: 100
 
 # Puglins
 mathjax: true # whether support mathjax
@@ -65,3 +68,6 @@ google_analytics_token:
 #disqus_short_name: 'your_short_name' # leave blank if you don't want disqus
 disqus_short_name: 
 
+# emoji
+gems:
+  - jemoji
